# fastapi-template

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  quality.yml
.opencode/skills/fastapi-domain/: SKILL.md
.opencode/skills/fastapi-test/: SKILL.md
alembic/: env.py
alembic/versions/: 0001_create_users_and_items.py  0002_add_oidc_and_salt.py
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh
scripts/: seed.py
src/app/: app.py  main.py
src/app/api/v1/: __init__.py
src/app/common/: config.py  database.py  di.py  exceptions.py  health.py  middleware.py  pagination.py  security.py  startup.py
src/app/common/base/: repository.py
src/app/core/: config.py  database.py  di.py  security.py
src/app/models/: __init__.py  base.py  item.py  user.py
src/app/repositories/: base.py  item.py  user.py
src/app/schemas/: item.py
src/app/services/: item.py  user.py
tests/: conftest.py  factories.py
tests/common/: test_exceptions.py  test_health.py  test_health_ready.py  test_pagination.py  test_password_strength.py  test_security.py
tests/domains/identity/: test_auth.py  test_repository.py  test_service.py  test_users.py
tests/domains/items/: test_items.py  test_repository.py  test_service.py
tests/test_api/: test_health.py  test_items.py  test_users.py
tests/test_repositories/: test_user_repo.py
tests/test_services/: test_user_service.py
(+12 files in other folders)
